--- a/server/todo.txt
+++ b/server/todo.txt
@@ -21,6 +21,8 @@ o) client runner_test.rb E6F reveals a problem on the runner_server
    Should a run() somehow record the cid inside the volume
    so goodbye() can get its cid and do the same synchronization?
    It seems logical that goodbye on the runner-server should be self-contained.
+   It would also allow me to make runner.run() a single method again and
+   not expose the cid.
    This suggests making the sandbox folders off a dir and not root.
    ...
    Should there be a volume per kata rather than per animal?
@@ -44,6 +46,63 @@ o) client runner_test.rb E6F reveals a problem on the runner_server
    exists for one avatar to overwrite another avatars files.
    Should I use a different uid for the run of each avatar
    and for the rights of their files?
+
+   Summary of possible designs
+   1) put sandbox off a sub-dir and put cidfiles in the sub-dir. Affects C#-Moq
+   2) have a second volume (per kata) holding the cids and timestamps
+      assuming it's not easy to get the timestamps from the sandbox timestamp
+   3) tar the volume in and out!
+   4) do the 10 second timeout in Ruby.
+      This would remove the need for docker_runner.sh
+      It also removes the need for storing the cid somewhere in the volume
+
+      def run(cid, max_seconds)
+        # require timeout
+        # note: use --workdir to avoid needing to do cd
+        read_out, write_out = IO.pipe
+        read_err, write_err = IO.pipe
+        cmd = "docker exec --user=nobody --interactive #{cid} sh -c './cyber-dojo.sh'"
+        pid = Process.spawn(cmd, pgroup:true, out:write_out, err:write_err)
+        begin
+          Timeout::timeout(max_seconds) do
+            Process.waitpid(pid)
+            # close write ends so we can read from them
+            write_out.close
+            write_err.close
+            stdout = read_out.readlines.join
+            stderr = read_err.readlines.join
+            return [true, stdout, stderr]
+          end
+        rescue Timeout::Error
+          Process.kill(-9, pid)
+          Process.detach(pid)
+          return [false, '', '']
+        ensure
+          write_out.close unless write_out.closed?
+          write_err.close unless write_err.closed?
+          # dispose the read ends of the pipes
+          read_out.close
+          read_err.close
+        end
+      end
+
+      def remove_container(cid) # called in micro-services run() in ensure block
+        # ask the docker daemon to remove the container
+        shell.exec("docker rm -f #{cid}")
+        # wait max 2 secs till it's gone
+        200.times do
+          # do the sleep first to keep test coverage at 100%
+          sleep(1.0 / 100.0)
+          break if container_dead(cid)?
+        end
+      end
+
+      def container_dead?(cid)
+        # See https://gist.github.com/ekristen/11254304
+        command = "docker inspect --format='{{ .State.Running }}' #{cid} 2> /dev/null"
+        _, status = shell.exec(command)
+        dead = status == 1
+      end
 
 o) write the hello()-datetime to a known file inside the volume.
    write the run()-datetime to a known file inside the volume.
