--- a/server/todo.txt
+++ b/server/todo.txt
@@ -3,6 +3,9 @@
 runner_server:
 -------------------------------------------------
 
+o) ditch Ruby-Minitest
+   use Java-cucumber
+
 o) if the file being copied is wibble.sh (say) and has
    execute rights then does [docker cp] preservice the
    execute status of wibble.sh inside the container?
