--- a/server/todo.txt
+++ b/server/todo.txt
@@ -3,11 +3,10 @@
 runner_server:
 -------------------------------------------------
 
-o) ditch Ruby-Minitest
-   use Java-cucumber
+o) test new_avatar is idempotent
 
 o) if the file being copied is wibble.sh (say) and has
-   execute rights then does [docker cp] preservice the
+   execute rights then does [docker cp] preserve the
    execute status of wibble.sh inside the container?
 
 o) massage micro_service returned strings.
