added client-side pulled_image? and pull_image tests; coverage now 100%

--- a/server/todo.txt
+++ b/server/todo.txt
@@ -1,11 +1,9 @@
 
--------------------------------------------------
 runner_server:
--------------------------------------------------
 
-o) massage micro_service returned strings.
-   - clean them
-   - truncate them
+o) micro_service returned strings.
+   - clean them +test
+   - truncate them +test
 
 o) runner_server micro-service needs to check each shell call and return
    { status:error, output:msg }
