--- a/server/todo.txt
+++ b/server/todo.txt
@@ -1,7 +1,7 @@
 
 runner_server:
 
-Redo shell.exec
+o) redo shell.exec
   require 'open3'
   def exec(command, logging = true)
     begin
@@ -22,8 +22,6 @@ Redo shell.exec
       raise error
     end
   end
-
-
 
 o) micro_service returned strings.
    - clean them +test
