--- a/server/todo.txt
+++ b/server/todo.txt
@@ -16,7 +16,7 @@ o) redo shell.exec
   require 'open3'
   def exec(command, logging = true)
     begin
-      stdout, stderr, status = Open3.capture(command)
+      stdout, stderr, status = Open3.capture3(command)
       if status != success && logging
         log << line
         log << "COMMAND:#{command}"
